# NaS-Core

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  CURRENT_PIPELINE.md  Dockerfile  Makefile  PROJECT_STATUS.md  README.md  SECURITY.md  alembic.ini  compose.yaml  pyproject.toml
artifacts/: README.md
data/: README.md  source-registry.yaml
docs/: README.md  architecture.md  data-governance.md  data-source-landscape.md  oncology-program.md  research-engine-plan.md  solo-research-operating-model.md  topic-selection.md
evals/: README.md
notebooks/: README.md
tests/: test_ai_screening.py  test_analysis_plan.py  test_appraisal.py  test_appraisal_progress.py  test_cohort.py  test_config.py  test_discovery.py  test_evidence_review.py  test_full_text.py  test_full_text_retrieval.py  test_gdc_ingestion.py  test_governance.py  test_health.py  test_literature_retrieval.py  test_object_store.py  test_prioritization.py  test_program.py  test_reconciliation.py  test_reliability_specification.py  test_screening.py  test_screening_review.py  test_storage_layout.py  test_study_scaffold.py  test_survival.py
workflows/: README.md  ai_screening_manifest.schema.json  ai_screening_output.schema.json  ai_screening_receipt.schema.json  analysis_plan.schema.json  cohort_build.schema.json  cohort_qa.schema.json  cohort_receipt.schema.json  data_feasibility.schema.json  dataset_snapshot.schema.json  evidence_review_progress.schema.json  inventory_reconciliation_receipt.schema.json  literature_search.schema.json  literature_search_receipt.schema.json  phase_zero_plan.schema.json  (+15 more)
(+184 files in other folders)
