[project]
name = "nas-core"
version = "0.1.0"
description = "Research and evidence infrastructure for the NaS Cortex"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "boto3>=1.35,<2",
  "certifi>=2026.6.17",
  "fastapi>=0.115,<1",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "psycopg[binary,pool]>=3.2,<4",
  "pyyaml>=6,<7",
  "sqlalchemy[asyncio]>=2.0,<3",
  "uvicorn[standard]>=0.34,<1",
  "lifelines>=0.30.3,<0.31",
  "matplotlib>=3.10,<4",
  "numpy>=2.2,<3",
  "openai>=2,<3",
  "pandas>=2.2,<3",
  "scipy>=1.15,<2",
]

[project.scripts]
nas-core = "nas_core.cli:main"

[dependency-groups]
dev = [
  "boto3-stubs[s3]>=1.35,<2",
  "httpx>=0.28,<1",
  "mypy>=1.14,<2",
  "pandas-stubs>=2.2,<3",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "ruff>=0.9,<1",
  "types-pyyaml>=6,<7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nas_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["nas_core"]
